--- a/JAVA/변수, 상수, 리터럴.md
+++ b/JAVA/변수, 상수, 리터럴.md
@@ -33,3 +33,4 @@ final int MAX = 100;
 ### 변수와 리터럴의 타입 불일치
 1. 범위가 변수 > 리터럴 인 경우 가능
 2. 범위가 변수 < 리터럴 인 경우 에러
+3. byte, short 변수에 int리터럴 저장 가능 (단, 변수의 타입의 범위 이내이어야 함.)
