--- a/JAVA/배열.md
+++ b/JAVA/배열.md
@@ -74,3 +74,47 @@ int[][] score = {
                     {7, 8, 9}
                  };
 ```
+
+### String 클래스
+1. String 클래스는 char[]와 메서드(기능)를 결합한 것.
+2. String 클래스는 내용을 변경할 수 없다(read only)
+3. String 클래스의 주요 메서드
+
+|메서드|설명|
+|----|----|
+|char charAt(int index)|문자열에서 해당 위치(index)에 있는 문자를 반환한다.|
+|int length()|문자열의 길이를 반환한다.|
+|String substring(int from, int to)|문자열에서 해당 범위(from ~ to)의 문자열을 반환한다.|
+|boolean equals(Object obj)|문자열의 내용이 같은지 확인한다. 같으면 결과는 true, 다르면 false|
+|char[] toCharArray()|문자열을 문자배열(char[])로 변환해서 반환한다.|
+
+### Arrays 로 배열 다루기
+- 문자열의 비교와 출력 - equals(), toString()
+```java
+int[] arr = {0, 1, 2, 3, 4};
+int[][] arr2D = {{11, 12}, {21,22}};
+
+System.out.println(Arrays.toString(arr));        // [0, 1, 2, 3, 4]
+System.out.println(Arrays.deepToString(arr2D));  // [[11, 12], [21, 22]]
+
+String[][] str2D = new String[][]{{"aa", "bb"}, {"AA", "BB"}};
+String[][] str2D2 = new String[][]{{"aa", "bb"}, {"AA", "BB"}};
+
+System.out.println(Arrays.equals(str2D, str2D2));     //false
+System.out.println(Arrays.deepEquals(str2D, str2D2)); //true
+```
+- 배열의 복사 - copyOf(), copyOfRange()
+```java
+int[] arr = {0, 1, 2, 3, 4};
+int[] arr2 = Arrays.copyOf(arr, arr.length) ;  // arr2=[0, 1, 2, 3, 4]
+int[] arr3 = Arrays.copyOf(arr, 3);            // arr3=[0, 1, 2]
+int[] arr4 = Arrays.copyOf(arr, 7);            // arr4=[0, 1, 2, 3, 4, 0, 0]
+int[] arr5 = Arrays.copyOfRange(arr, 2, 4);    // arr5=[2, 3]  <- 4는 불포함
+int[] arr6 = Arrays.copyOfRange(arr, 0, 7);    // arr6=[0, 1, 2, 3, 4, 0, 0]
+```
+- 배열의 정렬 - sort()
+```java
+int[] arr = {3, 2, 0, 4, 1};
+Arrays.sort(arr);    // 배열 arr을 정렬한다.
+System.out.println(Arrays.toString(arr));  // [0, 1, 2, 3, 4]
+```
