--- a/JAVA/컬렉션.md
+++ b/JAVA/컬렉션.md
@@ -6,12 +6,72 @@
 컬렉션 프레임워크의 핵심 인터페이스
 - List
   - 순서가 있는 데이터의 집합, 데이터의 중복을 허용한다.
-  - ArrayList, LinkedList, Stack, Vector 등
+  - **ArrayList**, **LinkedList**, Stack, Vector 등
 - Set
   - 순서를 유지하지 않는 데이터의 집합, 데이터의 중복을 허용하지 않는다.
-  - HashSet, TreeSet 등
+  - **HashSet**, **TreeSet** 등
 - Map
   - 키(key)와 값(value)으로 이루어진 데이터의 집합
   - 순서는 유지되지 않으며, 키는 중복을 허용하지 않고 값은 중복을 허용한다.
-  - HashMap, TreeMap, Hashtable, Properties 등
+  - **HashMap**, **TreeMap**, Hashtable, Properties 등
 - List 와 Set 의 공통부분을 뽑아낸 것이 collection 인터페이스
+
+### Collection 인터페이스의 메서드
+|메서드|설명|
+|----|----|
+|boolean add(Object o), boolean addAll(Collection c)|지정된 객체(o) 또는 Collection(c)의 객체들을 Collection에 추가한다.|
+|void clear()|Collection의 모든 객체를 삭제한다.|
+|boolean contains(Object o), boolean containsAll(Collection c)|지정된 객체(o) 또는 Collection의 객체들이 Collection에 포함되어 있는지 확인한다.|
+|boolean equals(Object o)|동일한 Collection인지 비교한다.|
+|int hashCode()|Collection의 hash code를 반환한다.|
+|boolean isEmpty()|Collection이 비어있는지 확인한다.|
+|iterator iterator()|Collection의 iterator를 얻어서 반환한다.|
+|boolean remove(Object o)|지정된 객체를 삭제한다.|
+|boolean removeAll(Collection c)|지정된 Collection에 포함된 객체들을 삭제한다.|
+|boolean retainAll(Collection c)|지정된 Collection에 포함된 객체만을 남기고 다른 객체들은 Collection에서 삭제한다. 이 작업으로 인해 Collection에 변화가 있으면 true를 그렇지 않으면 false를 반환한다.|
+|int size()|Collection에 지정된 객체의 개수를 반환한다.|
+|Object[] toArray()|Collection에 저장된 객체를 객체배열(Object[])로 반환한다.|
+|Object[] toArray(Object[] a)|지정된 배열에 Collection의 객체를 저장해서 반환한다.|
+
+### List 인터페이스 - 순서 O, 중복 O
+|메서드|설명|
+|----|----|
+|void add(int index, Object element), boolean addAll(int index, Collection c)|지정된 위치에 객체 또는 컬렉션에 포함된 객체들을 추가한다.|
+|Object get(int index)|지정된 위치에 있는 객체를 반환한다.|
+|int indexOf(Object o)|지정된 객체의 위치를 반환한다.(List의 첫 번째 요소부터 순반향으로 찾는다.)|
+|int lsatIndexOf(Object o)|지정된 객체의 위치를 반환한다.(List의 마지막 요소부터 역방향으로 찾는다.)|
+|ListIterator listIterator(), ListIterator listIterator(int index)|List의 객체에 접근할 수 있는 ListIterator를 반환한다.|
+|Object remove(int index)|지정된 위치에 있는 객체를 삭제하고 삭제된 객체를 반환한다.|
+|Object set(int index, Object element|지정된 위치에 객체를 저장한다.|
+|void sort(Comparator c)|지정된 비교자로 List를 정렬한다.|
+|List subList(int fromIndex, int toIndex)|지정된 번위에 있는 객체를 반환한다.|
+
+### Set 인터페이스 - 순서 X, 중복 X
+- Set 인터페이스의 메서드 = Collection 인터페이스와 동일
+- 집합과 관련된 메서드(Collection에 변화가 있으면 true, 아니면 false를 반환)
+
+|메서드|설명|
+|----|----|
+|boolean addAll(Collection c)|지정된 Collection의 객체들을 Collection에 추가한다.(합집합)|
+|boolean conatainsAll(Collection c)|지정된 Collection의 객체들이 Collection에 포함되어 있는지 확인한다.(부분집합)|
+|boolean removeAll(Collection c)|지정된 Collection에 포함된 객체들을 삭제한다.(차집합)|
+|booean retainAll(Collection c)|지정된 Collection에 포함된 객체만을 남기고 나머지는 Collection에서 삭제한다.(교집합)|
+
+
+### Map 인터페이스 - 순서 X, 중복(키 X, 값 O)
+|메서드|설명|
+|----|----|
+|void clear()|Map의 모든 객체를 삭제한다.|
+|boolean containsKey(Object key)|지정된 key 객체와 일치하는 Map의 key 객체가 있는지 확인한다.|
+|boolean containsValue(Object vlaue)|지정된 value 객체와 일치하는 Map의 value 객체가 있는지 확인한다.|
+|Set entrySet()|Map에 저장되어 있는 key-value 쌍을 Map.Entry타입의 객체로 저장한 Set으로 반환한다.|
+|boolean equals(Object o)|동일한 Map인지 비교한다.|
+|Object get(Object key)|지정한 key객체에 대응하는 value객체를 찾아서 반환한다.|
+|int hashCode()|해시코드를 반환한다.|
+|boolean isEmpty()|Map이 비어있는지 확인한다.|
+|Set keySet()|Map에 저장된 모든 key객체를 반환한다.|
+|Object put(Object key, Object value)|Map에 value객체를 key 객체에 연결(mapping)하여 저장한다.|
+|void putAll(Map t)|지정된 Map의 모든 key-value쌍을 추가한다.|
+|Object remove(Object key)|지정한 key객체와 일차하는 key-value 객체를 삭제한다.|
+|int size()|Map에 저장된 key-value 쌍의 개수를 반환한다.|
+|Collection values()|Map에 저장된 모든 value객체를 반환한다.|
