--- a/JAVA/리스트.md
+++ b/JAVA/리스트.md
@@ -69,3 +69,35 @@
 1. 순차적으로 데이터를 추가/삭제 - ArrayList가 빠름
 2. 비순차적으로 데이터를 추가/삭제 - LinkedList가 빠름
 3. 접근시간(읽기) - ArrayList가 빠름
+
+### 스택과 큐
+스택 : LIFO 구조. 마지막에 저장된 것을 제일 먼저 꺼내게 된다. (배열)
+
+큐 : FIFO 구조. 제일 먼저 저장한 것을 제일 먼저 꺼내게 된다. (LinkedList)
+
+### 스택과 큐의 메서드
+- 스택
+
+|메서드|설 명|
+|----|----|
+|boolean empty()|Stack이 비어있는지 알려준다.|
+|Object peek()|Stack의 맨 위에 저장된 객체를 반환. pop()과 달리 Stack에서 객체를 꺼내지는 않음(비었을 때는 EmptyStackException발생)|
+|Object pop()|Stack의 맨 위에 저장된 객체를 꺼낸다. (비었을 때는 EmptyStackException 발생)|
+|Object push(Object item)|Stack에 객체(item)를 저장한다.|
+|int search(Object o)|Stack에서 주어진 객체(o)를 찾아서 그 위치를 반환. 못 찾으면 -1을 반환. (배열과 달리 위치는 0이 아닌 1부터 시작)|
+
+- 큐
+
+|메서드|설 명|
+|----|----|
+|boolean add(Object o)|저장된 객체를 Queue에 추가한다. 성공하면 true를 반환. 저장공간이 부족하면 IllegalStateException 발생|
+|Object remove()|Queue에서 객체를 꺼내 반환. 비어있으면 NoSuchElementException 발생|
+|Object element()|삭제없이 요소를 읽어온다. peek와 달리 Queue가 비었을 때 NoSuchElementException 이 발생|
+|boolean offer(Object o)|Queue에 객체를 저장, 성공하면 true 실패하면 false 를 반환|
+|Object poll()|Queue에서 객체를 꺼내서 반환. 비어있으면 null을 반환|
+|Object peek()|삭제없이 요소를 읽어 온다. Queue가 비어있으면 null을 반환|
+
+```java
+Stack st = new Stack();
+Queue q = new LinkedList();
+```
