--- a/JAVA/지네릭스.md
+++ b/JAVA/지네릭스.md
@@ -41,3 +41,53 @@ public class ArrayList extends AbstractList {
 }
 ```
 - 타입 변수 대신 실제 타입이 지정되면, 형변환 생략 가능
+
+### 지네릭스 용어
+- Box<T> : 지네릭 클래스. 'T의 Box' 또는 'T Box' 라고 읽는다.
+- T : 타입 변수 또는 타입 매개변수.(T 는 타입 문자)
+- Box : 원시 타입(raw type)
+
+### 지네릭 타입과 다형성
+- 참조 변수와 생성자의 대입된 타입은 일치해야 한다.
+```java
+ArrayList<Tv> list = new ArrayList<Tv>();  // Ok 일치
+ArrayList<Product> list = new ArrayList<Tv>();  //에러, 불일치. (자손, 조상 관계도 안 됨)
+```
+- 지네릭 클래스간의 다형성은 성립(여전히 대입된 타입은 일치해야)
+```java
+List<TV> list = new ArrayList<Tv>();   //Ok 다형성 ArrayList가 List를 구현
+List<Tv> list = new LinkedList<Tv>();  //Ok 다형성 LinkedList가 List를 구현
+```
+- 매개변수의 다형성도 성립
+```java
+ArrayList<Product> list = newArrayList<Product>();
+list.add(new Product());
+list.add(new Tv());       //OK
+list.add(new Audio());    //OK
+
+Product p = list.get(0);
+Tv t = (Tv)list.get(1);  //반환타입이 Product 이기 때문에 형변환 필요
+```
+
+### 지네릭스 예시
+1. Iterator<E>
+- 클래스를 작성할 때, Object 타입 대신 T와 같은 타입 변수를 사용
+```java
+public interface Iterator<E> {
+    boolean hasNext();
+    E next();
+    void remove();
+}
+
+
+Iterator<Student> it = list.iterator();
+while (it.hasNext()) {
+    Student s = it.next();
+}
+```
+2. HashMap<K, V>
+- 여러 개의 타입 변수가 필요한 경우, 콤마(,)를 구분자로 선언
+```java
+HashMap<String, Student> map = new HashMap<String, Student>();   // 생성
+map.put("자바", new Student("자바", 1, 1, 100, 90, 100));         // 데이터 저장
+```
