--- a/JAVA/지네릭스.md
+++ b/JAVA/지네릭스.md
@@ -91,3 +91,15 @@ while (it.hasNext()) {
 HashMap<String, Student> map = new HashMap<String, Student>();   // 생성
 map.put("자바", new Student("자바", 1, 1, 100, 90, 100));         // 데이터 저장
 ```
+
+### 제한된 지네릭 클래스
+- extends 로 대입할 수 있는 타입을 제한
+```java
+class FruitBox<T extends Fruit> {          // Fruit의 자손만 타입으로 지정 가능
+           // T 만 있을 때는 모든 타입 가능
+    ArrayList<T> list = new ArrayList<T>();
+}
+
+FruitBox<Apple> appleBox = new FruitBox<Apple>();   //OK
+FruitBox<Apple> toyBox = new FruitBox<Toy>();   //에러. Toy는 Fruit의 자손이 아님
+```
