--- a/JAVA/쓰레드.md
+++ b/JAVA/쓰레드.md
@@ -121,3 +121,68 @@ void uncaughtException(Thread t, Throwable e)
 | void resume()                                                                 | suspend()에 의해 일시정지상태에 있는 쓰레드를 실행대기상태로 만든다.                                 |
 | static void yield()                                                           | 실행 중인 자신에게 주어진 실행시간을 다른 쓰레드에게 양보하고 자신은 실행대기상태가 된다.|
 
+### sleep()
+- 현재 쓰레드를 지정된 시간동안 멈추게 한다.
+- 예외처리를 해야 한다.(InterruptedException 이 발생하면 깨어남)
+```java
+try {
+    Thread.sleep(1, 500000);
+} catch (InterruptedException e) {}
+```
+- 자기 자신에게 적용되는 메서드이기 때문에 특정 쓰레드를 지정해서 멈추게 하는 것은 불가능하다.
+
+### interrupt()
+- 대기상태인 쓰레드를 실행대기 상태로 만든다
+  - void interrupt() : 쓰레드의 interrupted 상태를 false에서 true로 변경.
+  - boolean isInterrupted() : 쓰레드의 interrupted 상태를 반환.
+  - static boolean interrupted() : 현재 쓰레드의 interrupted 상태를 알려주고, false로 초기화
+
+### suspend(), resume(), stop()
+- 쓰레드의 실행을 일시정지, 재개, 완전 정지 시킨다.
+  - void suspend() : 쓰레드를 일시정지 시킨다.
+  - void resume() : suspend()에 의해 일시정지된 쓰레드를 실행대기상태로 만든다.
+  - void stop() : 쓰레드를 즉시 종료시킨다.
+- 교착상태에 빠지기 쉬워서 deprecated 됨
+![img.png](../쓰레드/img.png)
+
+### join()
+- 지정된 시간동안 특정 쓰레드가 작업하는 것을 기다린다.
+  - void join() : 작업이 모두 끝날 때까지
+  - void join(long millis) : 천분의 일초 동안
+  - void join(long millis, int nanos)  : 천분의 일초 + 나노초 동안
+- 예외 처리를 해야 한다.(InterruptedException이 발생하면 작업 재개)
+```java
+try {
+    th1.join();  //main 쓰레드가 th1의 작업이 끝날 때까지 기다린다.
+    th2.join();  //main 쓰레드가 th2의 작업이 끝날 때까지 기다린다.
+} catch (InterruptedException e) {}
+```
+
+### yield()
+- 남은 시간을 다음 쓰레드에게 양보하고, 자신(현재 쓰레드)은 실행대기한다.
+- yield()와 interrupt()를 적절히 사용하면, 응답성과 효율을 높일 수 있다.
+
+### 쓰레드의 동기화
+- 멀티 쓰레드 프로세스에서는 다른 쓰레드의 작업에 영향을 미칠 수 있다.
+- 진행중인 작업이 다른 쓰레드에게 간섭받지 않게 하려면 '동기화'가 필요
+  - 쓰레드의 동기화 - 한 쓰레드가 진행중인 작업을 다른 쓰레드가 간섭하지 못하게 막는 것
+- 동기화하려면 간섭받지 않아야 하는 문장들을 '임계 영역'으로 설정
+- 임계영역은 락(lock)을 얻은 단 하나의 쓰레드만 출입가능(객체 1개에 락 1개)
+
+### synchronized를 이용한 동기화
+- synchronized로 임계영역(lock이 걸리는 영역)을 설정하는 방법 2가지
+```java
+1. 메서드 전체를 임계 영역으로 지정
+public synchronized void calcSum(){
+}
+2. 특정한 영역을 임계 영역으로 지정
+synchronized(객체의 참조변수) {
+}
+```
+
+### wait()과 notify()
+- 동기화의 효율을 높이기 위해 wait(), notify()를 사용.
+- Object 클래스에 정의되어 있으며, 동기화 블록 내에서만 사용할 수 있다.
+  - wait() - 객체의 lock을 풀고 쓰레드를 해당 객체의 waiting pool에 넣는다.
+  - notify() - waiting pool에서 대기중인 쓰레드 중의 하나를 깨운다.
+  - notifyAll() - waiting pool에서 대기중인 모든 쓰레드를 깨운다.
