--- a/JAVA/스트림.md
+++ b/JAVA/스트림.md
@@ -49,4 +49,31 @@ static <T> Stream<T> generate(Supplier<T> s)  // 이전 요소에 독립적
 - generate() 는 seed를 사용하지 않는다.
   - Stream<Double> randomStream = Stream.generate(Math::random);
   - Stream<Integer> oneStream = Stream.generate(() -> 1);
-- 
+
+### 스트림의 연산
+- 스트림이 제공하는 기능 : 중간 연산과 최종 연산
+- 중간 연산
+
+|중간 연산|설명|
+|----|----|
+|Stream<T> distinct()|중복을 제거|
+|Stream<T> filter(Predicate<T> predicate)|조건에 안 맞는 요소 제외|
+|Stream<T> limit(long maxSize)|스트림의 일부를 잘라낸다|
+|Stream<T> skip(long n)|스트림의 일부를 건너뛴다|
+|Stream<T> peek(Consumer<T> action)|스트림의 요소에 작업 수행|
+|Stream<T> sorted(),<br/>Stream<T> sorted(Comparator<T> comparator)|스트림의 요소를 정렬한다.|
+|mapToInt(ToIntFuntion<T> mapper)|스트림의 요소를 변환한다.|
+
+- 최종 연산
+
+| 최종 연산                                                                                         |설명|
+|-----------------------------------------------------------------------------------------------|----|
+| void forEach(Consumer<? super T> action),<br/>void forEachOrdered(Consumer<? super T> action) |각 요소에 지정된 작업 수행|
+| long count()                                                                                  |스트림의 요소의 개수 반환|
+| Optional<T> max(Comparator<? super T> comparator)                                             |스트림의 최대값/최소값을 반환|
+| Optional<T> findAny(), findFirst()                                                            |스트림의 요소 하나를 반환|
+| boolean allMatch(predicate<T> p), anyMatch, noneMatch                                         |주어진 조건을 모든 요소가 만족시키는지, 만족시키지 않는지 확인|
+| Object[] toArray()                                                                            |스트림의 모든 요소를 배열로 반환|
+| Optional<T> reduce(BinaryOperator<T> accumulator)                                             |스트림의 요소를 하나씩 줄여가면서 계산|
+| R collect(Collector<T, A, R> collector)                                                       |스트림의 요소를 수집한다.|
+|
