--- a/JAVA/기본형과 참조형.md
+++ b/JAVA/기본형과 참조형.md
@@ -46,4 +46,4 @@ char : 0 ~ 2<sup>16</sup> - 1 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (0 ~ 65535)
 
 int : -2<sup>31</sup> ~ 2<sup>31</sup> - 1 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(-20억 ~ 20억)
 
-![img.png](../표현범위/img.png)
+![img.png](../img/표현범위.png)
