--- a/JAVA/리스트.md
+++ b/JAVA/리스트.md
@@ -40,9 +40,9 @@
   3. 데이터가 삭제되어 데이터의 개수가 줄었으므로 size의 값을 감소시킨다.
   4. 마지막 데이터를 삭제하는 경우, 1 의 과정(배열의 복사)은 필요 없다.
 - ArrayList에 저장된 첫 번째 객체부터 삭제하는 경우 - 배열 복사 발생
-![img.png](../arraylist1/img.png)
+![img.png](../img/arrlist1.png)
 - ArrayList에 저장된 마지막 객체부터 삭제하는 경우 - 배열 복사 발생 안함, 빠름
-![img.png](../arraylist2/img.png)
+![img.png](../img/arrlist2.png)
 
 # LinkedList
 ### 배열의 장단점
