--- a/JAVA/연산자와 피연산자.md
+++ b/JAVA/연산자와 피연산자.md
@@ -13,10 +13,10 @@ x, 3 : 피연산자
 모든 연산자는 연산결과를 반환한다.
 
 ### 연산자의 종류
-![img.png](../연산자%20종류/img.png)
+![img.png](../img/연산자%20종류.png)
 
 ### 연산자의 우선순위와 결합규칙
-![img.png](../우선순위와%20결합규칙/img.png)
+![img.png](../img/우선순위와%20결합규칙.png)
 1. 산술 > 비교 > 논리 > 대입. 대입은 제일 마지막에 수행된다.
 2. 단항(1) > 이항(2) > 삼항(3). 단항 연산자의 우선순위가 이항 연산자보다 높다.
 3. 단항 연산자와 대입 연산자를 제외한 모든 연산의 진행방향은 왼쪽에서 오른쪽이다.
