--- a/JAVA/프로그램 오류, 예외 클래스.md
+++ b/JAVA/프로그램 오류, 예외 클래스.md
@@ -15,7 +15,7 @@
 - Exception 클래스들 : 사용자의 실수와 같은 외적인 요인에 의해 발생하는 예외
 - RuntimeException 클래스들 : 프로그래머의 실수로 발생하는 예외
 
-![img.png](../exception/img.png)
+![img.png](../img/exception.png)
 
 #### 프로그램 오류
 - 컴파일 에러
