--- a/JAVA/쓰레드.md
+++ b/JAVA/쓰레드.md
@@ -143,7 +143,7 @@ try {
   - void resume() : suspend()에 의해 일시정지된 쓰레드를 실행대기상태로 만든다.
   - void stop() : 쓰레드를 즉시 종료시킨다.
 - 교착상태에 빠지기 쉬워서 deprecated 됨
-![img.png](../쓰레드/img.png)
+![img.png](../img/쓰레드.png)
 
 ### join()
 - 지정된 시간동안 특정 쓰레드가 작업하는 것을 기다린다.
